# sfctl-ai

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cursor/: mcp.json
.github/workflows/: CI.yml
dns-mcp-server/: Cargo.toml  README.md  direct-test.ps1  init-request.json  lookup-request.json  quick-test.ps1  test-dns-mcp.ps1  test-in-vscode.md  test.bat
dns-mcp-server/src/: dns_mcp.rs  main.rs
dns-mcp-server/test/: test-dns.json
docs/: Dev.md
sfctl-ai/: Cargo.toml
sfctl-ai/app/: main.rs  main.rs.bak  main.rs.fixed  mcp_main.rs  mcp_server.rs  mcp_server.rs.bak  mcp_server.rs.fixed
sfctl-ai/src/: ack.rs  ai.rs  cmd_parse.rs  lib.rs  main.rs  model.rs  pwsh.rs  system_prompt.txt
