[package]
name = "dns-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.3", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"
anyhow = "1.0"
schemars = "1.0"