[package]
name = "sfctl-ai"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sfctl-ai"
path = "app/main.rs"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
genai.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
futures.workspace = true
rmcp = { workspace = true, features = ["server", "transport-io", "macros"] }
reqwest.workspace = true
schemars.workspace = true
chrono.workspace = true


